fix: trick body overflow when image viewer open

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -95,3 +95,7 @@ main {
 	visibility: hidden;
 	opacity: 0;
 }
+
+.picture-viewer-open {
+	overflow: hidden;
+}
